# lucene-to-sqlalchemy

./: .gitignore  pyproject.toml  shell.nix
engine/: __init__.py
tests/: test_parser.py
